--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
+    "createjs": "0.0.1",
+    "createjs-collection": "^0.8.2-1",
     "easeljs": "0.0.0",
     "physicsjs": "^0.7.0",
     "webpack": "^2.2.1"
